@@ -1,15 +1,12 @@
 // $Id$
 
-project(CIAO_TargetManager_stub): ciao_client_dnc, ciao_deployment_stub {
-  after += NodeManager_stub
+project(CIAO_TargetManager_stub): ciao_client_dnc, ciao_deployment_stub, ciao_nodemanager_stub {
   sharedname = TargetManager_stub
   idlflags += -Wb,stub_export_macro=TARGETMANAGER_STUB_Export \
               -Wb,stub_export_include=TargetManager_stub_export.h \
               -Wb,skel_export_macro=TARGETMANAGER_SVNT_Export \
               -Wb,skel_export_include=TargetManager_svnt_export.h
   dynamicflags   = TARGETMANAGER_STUB_BUILD_DLL
-
-  libs +=  NodeManager_stub
 
   IDL_Files {
     TargetManagerImpl.idl
@@ -24,13 +21,12 @@ project(CIAO_TargetManager_stub): ciao_client_dnc, ciao_deployment_stub {
   }
 }
 
-project(CIAO_TargetManager_svnt) : ciao_servant_dnc {
-  after += CIAO_TargetManager_stub
+project(CIAO_TargetManager_svnt) : ciao_servant_dnc, ciao_targetmanager_stub {
   sharedname  = TargetManager_svnt
-  libs    += TargetManager_stub NodeManager_stub
 
   idlflags  +=  -Wb,export_macro=TARGETMANAGER_SVNT_Export \
                 -Wb,export_include=TargetManager_svnt_export.h
+
   dynamicflags = TARGETMANAGER_SVNT_BUILD_DLL
 
   CIDL_Files {
@@ -51,13 +47,9 @@ project(CIAO_TargetManager_svnt) : ciao_servant_dnc {
 }
 
 
-project(CIAO_TargetManager_exec) : ciao_component_dnc, ciao_config_handlers, ciao_domainapplicationmanager_dnc {
-  after   += CIAO_TargetManager_svnt
+project(CIAO_TargetManager_exec) : ciao_component_dnc, ciao_config_handlers, ciao_domainapplicationmanager_dnc, ciao_targetmanager_svnt {
   sharedname = TargetManager_exec
-  libs      += TargetManager_stub TargetManager_svnt NodeManager_stub
 
-  idlflags  +=  -Wb,export_macro=TARGETMANAGER_EXEC_Export \
-                -Wb,export_include=TargetManager_exec_export.h
   dynamicflags   = TARGETMANAGER_EXEC_BUILD_DLL
 
   Source_Files {
