@@ -1,3 +1,11 @@
+Mon Dec  4 12:29:57 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * DAnCE/TargetManager/DomainDataManager.h:
+          Documentation changes
+
+        * DAnCE/TargetManager/TargetManager.mpc:
+          Simplified this file using more base projects
+
 Mon Dec  4 12:24:57 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * MPC
